--- a/LIVE/test/fixtures/participants.yml
+++ b/LIVE/test/fixtures/participants.yml
@@ -1,3 +1,17 @@
+# == Schema Information
+#
+# Table name: participants
+#
+#  id         :integer          not null, primary key
+#  nombre     :string
+#  ocupacion  :string
+#  interes    :string
+#  correo     :string
+#  telefono   :string
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
